Web Share: Refactor Mojo interface to now return an enum error.

Previously returned a string containing the error message, which was a
source of inconsistency among the different platforms. Now all platforms
generate the same error messages for the user, and those are done in a
centralized place.

BUG=687376

Review-Url: https://codereview.chromium.org/2703333002
Cr-Commit-Position: refs/heads/master@{#454485}

Former-commit-id: 17e725cb4b30de97279784130bdb36b8a3162a26