chrome/android/java/src/org/chromium/chrome/browser/webshare/ShareServiceImpl.java
@@ -15,6 +15,7 @@ import org.chromium.content_public.browser.WebContents;
 import org.chromium.mojo.system.MojoException;
 import org.chromium.ui.base.WindowAndroid;
 import org.chromium.url.mojom.Url;
+import org.chromium.webshare.mojom.ShareError;
 import org.chromium.webshare.mojom.ShareService;
 
 /**
@@ -56,7 +57,7 @@ public class ShareServiceImpl implements ShareService {
         if (mActivity == null) {
             RecordHistogram.recordEnumeratedHistogram("WebShare.ShareOutcome",
                     WEBSHARE_OUTCOME_UNKNOWN_FAILURE, WEBSHARE_OUTCOME_COUNT);
-            callback.call("Share failed");
+            callback.call(ShareError.INTERNAL_ERROR);
             return;
         }
 
@@ -64,13 +65,13 @@ public class ShareServiceImpl implements ShareService {
             public void onTargetChosen(ComponentName chosenComponent) {
                 RecordHistogram.recordEnumeratedHistogram("WebShare.ShareOutcome",
                         WEBSHARE_OUTCOME_SUCCESS, WEBSHARE_OUTCOME_COUNT);
-                callback.call(null);
+                callback.call(ShareError.OK);
             }
 
             public void onCancel() {
                 RecordHistogram.recordEnumeratedHistogram("WebShare.ShareOutcome",
                         WEBSHARE_OUTCOME_CANCELED, WEBSHARE_OUTCOME_COUNT);
-                callback.call("Share canceled");
+                callback.call(ShareError.CANCELED);
             }
         };
 
